Added analysis document for Mets Attendance Data Frame

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,8 +1,8 @@
 .header {
-    color: aliceblue;
+    color: #fff;
     padding: 25px 0;
     text-align: center;
-    background: #222;
+    background: #0066b8;
   }
   .header img {
     width: 100px;
