--- a/src/Body/gridLayout.css
+++ b/src/Body/gridLayout.css
@@ -7,7 +7,11 @@
     border: 2px solid #babfc7;   
 }
 
-#data_buttons button{
+.container_header { 
+    display: flex;
+}
+
+button {
     font-family: var(--standard-ff);
     margin: 0.5em;
     box-shadow: 0px 1px 3px #cdcacaa6;
@@ -16,7 +20,32 @@
     font-weight: 500;
     background-color: #fafafa;
     transition: 0.2s background ease-in, 0.2s color ease-in;
-}   
+}
+
+#data_buttons { 
+    display: flex;
+    flex-flow: row-reverse;
+}
+
+#data_buttons input[type="file"] { 
+    display: none;
+}
+
+#data_buttons label { 
+    font-family: var(--standard-ff);
+    margin: 0.5em;
+    box-shadow: 0px 1px 3px #cdcacaa6;
+    padding: 0.5em 1em;
+    border: 2px solid #babfc7;
+    font-weight: 500;
+    background-color: #fafafa;
+    transition: 0.2s background ease-in, 0.2s color ease-in;
+}
+
+#data_buttons label:hover { 
+    background-color: #448d53;
+    color: #fff;
+}
 
 #import-df {
     float: left;
